# predicate-contracts

./: .gitignore  .gitmodules  AltWithBytes32.ts  CONTRIBUTING.md  Client.t.sol  LICENSE  Makefile  OVERVIEW.md  Ownership.t.sol  PLAN.md  PROMPT-SOROBAN-STABLECOIN.md  README.md  ServiceManager.t.sol  contrafactory.toml  foundry.toml  hardhat.config.ts  package-lock.json  package.json  predicateMetaCoin.ts  remappings.txt
.github/workflows/: contracts.yml  publish.yml  release-artifacts.yml
cache/: solidity-files-cache.json
docs/: asset-compliance.md
examples/proxy/: MetaCoin.sol
helpers/: MockClient.sol  MockDelegationManager.sol  MockEigenPodManager.sol  MockStrategyManager.sol
helpers/eigenlayer/: BeaconChainProofs.sol  DelegationManagerStorage.sol  Pausable.sol
helpers/utility/: OperatorTestPrep.sol  STMSetup.sol  TestPrep.sol  TestStorage.sol  TestUtils.sol
script/: DeployDepositor.s.sol  DeployMetaCoin.s.sol  UpgradeServiceManager.s.sol
script/asset-compliance/: DeployFreezableStablecoin.s.sol  (+1 more)
scripts/: extract-artifacts.js
soroban/: Cargo.toml  README.md
soroban/example-compliant-token/: Cargo.toml
soroban/example-compliant-token/src/: lib.rs
soroban/predicate-client/: Cargo.toml
soroban/predicate-client/src/: lib.rs
soroban/predicate-registry/: Cargo.toml
soroban/predicate-registry/src/: attesters.rs  lib.rs  policy.rs  types.rs  validation.rs
soroban/predicate-registry/test_snapshots/test/: test_register_attester_not_owner.2.json  test_set_owner_not_owner.1.json  test_set_policy_not_authorized.2.json
soroban/scripts/: deploy-compliant-token.sh  deploy-registry.sh  deploy.sh  extract-docs.js  upgrade-registry.sh
soroban/test-stablecoin/: Cargo.toml
soroban/test-stablecoin/src/: lib.rs
soroban/test-stablecoin/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_block_unblock.1.json  test_blocked_user_cannot_approve.1.json  test_blocked_user_cannot_burn.1.json  test_blocked_user_cannot_transfer.1.json  test_burn.1.json  test_burn_from_blocked_user.1.json  test_constructor.1.json  test_mint.1.json  test_mint_not_admin.2.json  test_set_compliance_admin_not_admin.1.json  test_transfer.1.json  test_transfer_from_blocked_user.1.json  test_transfer_from_to_blocked_user.1.json  test_transfer_to_blocked_user.1.json
src/: Freezable.sol  PredicateRegistry.sol  ServiceManager.sol  SimplePredicateRegistry.sol  SimpleServiceManager.sol
test/: Client.t.sol  FreezableToken.t.sol  MetaCoin.t.sol  Ownership.t.sol  PredicateRegistry.t.sol  PredicateRegistryAttestation.t.sol  PredicateRegistryAttester.t.sol  PredicateRegistryAttestor.t.sol  PredicateRegistryOwnership.t.sol  PredicateRegistryPolicy.t.sol  STMTest.t.sol  ServiceManager.t.sol  ServiceManagerAllowRegistrations.t.sol  SimpleServiceManager.t.sol
(+74 files in other folders)
