[workspace]
resolver = "2"
members = [
    "test-stablecoin",
    "predicate-registry",
    "predicate-client",
    "example-compliant-token",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
